--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -22,10 +22,16 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - name: Down file
-      uses: actions/download-artifact@v4
-      with:
-        name: hello-artifact
-        path: ./artifacts
-    - name: Display content file
-      run: cat ./artifacts/hello.txt
+      - name: Download text file
+        uses: actions/download-artifact@v4
+        with:
+          name: hello-artifact
+          path: ./artifacts
+      - name: Display content of the text file
+        run: cat ./artifacts/hello.txt
+
+
+
+
+
+
